After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776896 - Icons incorrectly scaled on non-hidpi screen
Icons incorrectly scaled on non-hidpi screen
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Views: Icon View
3.22.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-05 11:57 UTC by Lionel Landwerlin
Modified: 2017-01-09 23:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Issue (1.01 MB, video/webm)
2017-01-05 11:57 UTC, Lionel Landwerlin
  Details
canvas-container: listen to scale factor to invalidate icons (1.65 KB, patch)
2017-01-06 15:55 UTC, Lionel Landwerlin
committed Details | Review
icon-info: hash/store icons using scale factor as well as size (3.54 KB, patch)
2017-01-06 15:55 UTC, Lionel Landwerlin
committed Details | Review

Description Lionel Landwerlin 2017-01-05 11:57:59 UTC
Created attachment 342944 [details]
Issue

When using 2 screens, one hidpi and the other not. Nautilus seems to use the wrong scaling factor for the icon view.
Attached is a video of the issue.

You can reproduce this using a nester mutter :

MUTTER_DEBUG_NUM_DUMMY_MONITORS=2 MUTTER_DEBUG_DUMMY_MONITOR_SCALES=2,1 mutter --wayland --nested

and launch nautilus like this :

GDK_BACKEND=wayland WAYLAND_DISPLAY=wayland-1 nautilus
Comment 1 Lionel Landwerlin 2017-01-06 15:55:03 UTC
Created attachment 343026 [details] [review]
canvas-container: listen to scale factor to invalidate icons
Comment 2 Lionel Landwerlin 2017-01-06 15:55:24 UTC
Created attachment 343027 [details] [review]
icon-info: hash/store icons using scale factor as well as size
Comment 3 Carlos Soriano 2017-01-09 16:15:17 UTC
Review of attachment 343026 [details] [review]:

Yeah, feel free to backport to 3.22
Comment 4 Carlos Soriano 2017-01-09 16:18:17 UTC
Review of attachment 343027 [details] [review]:

Looks good, thanks!

Eventually all of this will be fixed with the port to GtkFlowBox etc.
Comment 5 Lionel Landwerlin 2017-01-09 23:55:13 UTC
Review of attachment 343026 [details] [review]:

Pushed to 3.22 and master.
Comment 6 Lionel Landwerlin 2017-01-09 23:55:29 UTC
Review of attachment 343027 [details] [review]:

Pushed to 3.22 and master.
Comment 7 Lionel Landwerlin 2017-01-09 23:55:56 UTC
All done, cheers!