canvas-container: listen to scale factor to invalidate icons

This is one of the condition that needs to trigger an invalidation to
recompute layout at the correct size.

https://bugzilla.gnome.org/show_bug.cgi?id=776896

origin commit:
https://gitlab.gnome.org/GNOME/nautilus/commit/b257699e